<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="flipper_name_default">Flipper</string>
    <string name="file_name_default">Office_door</string>
    <string name="img_app_logo">Flipper App logo</string>
    <string name="img_btn">Button</string>
    <string name="img_disable_btn">Disable button</string>
    <string name="img_add_btn">Add key</string>
    <string name="widget_loading">Loading…</string>
    <string name="widget_title">Emulate On Flipper (Continuous)</string>
    <string name="widget_title_one_tap">Emulate On Flipper (One Signal)</string>
    <string name="widget_description">Emulate your Flipper’s keys, cards and signals remotely.</string>
    <string name="widget_description_one_tap">Emulate your Flipper’s keys, cards and signals remotely. Sends a signal only once.</string>
    <string name="widget_err_cant_connect">Can’t Connect to Flipper</string>
    <string name="widget_err_bt_turn_off">Bluetooth is Turned Off</string>
    <string name="widget_err_busy">Flipper is Busy</string>
    <string name="widget_err_not_synced">This Key is not Synced</string>
    <string name="widget_err_deleted">This Key is Deleted</string>
    <string name="widget_err_unknown">Error during key emulation</string>

    <string name="widget_err_retry_btn">Retry</string>
    <string name="widget_err_customize_btn">Customize</string>

    <string name="notification_widget_channel_name">Widget update</string>
    <string name="notification_widget_channel_desc">The notification channel, which is used for the internal mechanisms of the widget update</string>
    <string name="notification_widget_cancel">Cancel</string>
    <string name="notification_widget_invalidate_name">Updating widget data</string>
    <string name="notification_widget_invalidate_desc">Check that all data on the widgets are correct</string>
    <string name="notification_widget_start_name">Start emulate</string>
    <string name="notification_widget_start_desc">Send start request for a flipper</string>
    <string name="notification_widget_emulating_name">Emulating</string>
    <string name="notification_widget_emulating_desc">Emulating the key</string>
    <string name="notification_widget_stop_name">Stopping key emulation</string>
    <string name="notification_widget_stop_desc">Send stop request for a flipper</string>
    <string name="notification_widget_waiting_flipper_name">Connecting to the Flipper</string>
    <string name="notification_widget_waiting_flipper_desc">Trying to connect to the flipper</string>

    <string name="widget_title_remote_control">Remote Control</string>
    <string name="widget_description_remote_control">Shows the Flipper\'s screen and lets you send D-pad presses from the home screen. Updates when you tap a button.</string>
    <string name="remote_control_widget_screen">Flipper screen</string>
    <string name="rc_widget_up">Up</string>
    <string name="rc_widget_down">Down</string>
    <string name="rc_widget_left">Left</string>
    <string name="rc_widget_right">Right</string>
    <string name="rc_widget_ok">Ok</string>
    <string name="rc_widget_back">Back</string>
</resources>