<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:padding="8dp">

    <ImageView
            android:id="@+id/remote_screen"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_height="80dp"
            android:layout_width="match_parent"
            android:contentDescription="@string/remote_control_widget_screen"
            android:scaleType="fitCenter" />

    <RelativeLayout
            android:id="@+id/remote_dpad"
            android:layout_below="@id/remote_screen"
            android:layout_centerHorizontal="true"
            android:layout_height="136dp"
            android:layout_marginTop="8dp"
            android:layout_width="136dp">

        <ImageView
                android:id="@+id/remote_btn_up"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:background="@drawable/remote_button_bg"
                android:contentDescription="@string/rc_widget_up"
                android:padding="8dp"
                android:rotation="0"
                android:src="@drawable/ic_remote_arrow" />

        <ImageView
                android:id="@+id/remote_btn_down"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:background="@drawable/remote_button_bg"
                android:contentDescription="@string/rc_widget_down"
                android:padding="8dp"
                android:rotation="180"
                android:src="@drawable/ic_remote_arrow" />

        <ImageView
                android:id="@+id/remote_btn_left"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:background="@drawable/remote_button_bg"
                android:contentDescription="@string/rc_widget_left"
                android:padding="8dp"
                android:rotation="270"
                android:src="@drawable/ic_remote_arrow" />

        <ImageView
                android:id="@+id/remote_btn_right"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:background="@drawable/remote_button_bg"
                android:contentDescription="@string/rc_widget_right"
                android:padding="8dp"
                android:rotation="90"
                android:src="@drawable/ic_remote_arrow" />

        <ImageView
                android:id="@+id/remote_btn_ok"
                android:layout_centerInParent="true"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:background="@drawable/remote_button_bg"
                android:contentDescription="@string/rc_widget_ok"
                android:padding="10dp"
                android:src="@drawable/ic_remote_ok" />
    </RelativeLayout>

    <ImageView
            android:id="@+id/remote_btn_back"
            android:layout_below="@id/remote_dpad"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_height="32dp"
            android:layout_width="32dp"
            android:background="@drawable/remote_button_bg"
            android:contentDescription="@string/rc_widget_back"
            android:padding="6dp"
            android:src="@drawable/ic_remote_back" />
</RelativeLayout>
